Deep rewrite of JIT, Security, and JVM internals topics (batch 1)
by-topic/core/jit/index.md (787 → 1329 lines):
- C2 Ideal Graph (Sea of Nodes): node types, IGVN, loop opts
- Escape analysis: NoEscape/ArgEscape/GlobalEscape, scalar replacement
- Inlining: CHA, polymorphic inline cache, thresholds from source
- Compile::Optimize() 20-step execution order from source
- AOT evolution: JEP 295 → GraalVM → Project Leyden
- Diagnostics: PrintCompilation, IGV, JFR events

by-topic/security/security/index.md (399 → 1176 lines):
- TLS 1.0→1.3 evolution, JSSE architecture, 0-RTT/PSK
- Post-quantum crypto: ML-KEM/ML-DSA code examples
- Security Manager timeline (JDK 1.0 → JEP 486)
- Serialization security: gadget chains, JEP 290/415 filters
- KDF API, PEM API with code examples
- JDK crypto provider architecture

by-topic/core/jvm/index.md (522 → 1097 lines):
- HotSpot architecture: interpreter, compiler, runtime, GC
- Object model: mark word bits, CompressedOops, Lilliput
- Class loading: parent delegation, JPMS changes
- Safepoint: polling mechanism, TTSP optimization
- NMT: MemTag categories from source, jcmd usage
- JVM startup: Threads::create_vm() sequence from source

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>